2005-08-11  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/regression/slur-script.ly: Fixed.

	* lily/phrasing-slur-engraver.cc (class Phrasing_slur_engraver):
	Update cut and paste code from Slur_engraver.

	* scm/define-grob-interfaces.scm (dynamic-line-spanner-interface):
	Add.

	* scm/define-grobs.scm (DynamicLineSpanner): Add
	dynamic-line-spanner-interface.
	(DynamicLineSpanner, TextScript, Fingering): Add slur-padding.

2005-08-09  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/slur-engraver.cc (acknowledge_extra_object): Bugfix: use
	to_boolean () so that non-set 'inside-slur means false.

	* lily/slur.cc (outside_slur_callback): Bugfixes: make sure that
	slur has control-points.  Skip script without direction.  Always
	do_shift if script inside slur, even if slur not contained in
	script y-extent.  Increment k in loop.

2005-08-11  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scm/define-markup-commands.scm: Improved regexp to search for
	EPS bounding boxes and corrected call to ly:warning.

2005-08-10  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* Documentation/user/programming-interface.itely (Displaying music
	expressions): doc for \displayLilyMusic. Also some precisions in
	"Markup construction in Scheme"

2005-08-10  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scm/define-markup-commands.scm (normal-text): Added 2 new
	markup commands, \normal-text and \medium (the latter thanks to
	Bruce Fairchild). 

2005-08-08  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/programming-interface.itely: fix @{ @}.

	* scm/define-markup-commands.scm: add linewidth info to
	\justify and \wordwrap, add "upright is the opposite of italic".

	* Documentation/user/advanced-notation.itely: shaped->shape,
	add (cons (markup "foo")) type of example to text markup,
	reword multi-measure rests section.

	* lily/note-heads-engraver.cc: changed Shaped->Shape in a
	comment.  No actual code was touched.

	* Documentation/user/invoking.itely: add more info about