@@ -92,5 +92,5 @@ Text_interface::is_markup (SCM x)
 
 ADD_INTERFACE (Text_interface, "text-interface",
 	       "A scheme markup text, see @usermanref{Text markup}.",
-	       "text baseline-skip word-space");
+	       "baseline-skip direction text word-space");
 
