@@ -1,6 +1,13 @@
 2005-08-11  Jan Nieuwenhuizen  <janneke@gnu.org>
 
-	* input/regression/slur-script.ly: Fixed.
+	* lily/lily-guile.cc (parse_symbol_list): Rewrite.  Grok multiple
+	whitespace as symbol separator.
+
+	* lily/side-position-interface.cc: Add slur-padding.
+
+	* input/regression/slur-script.ly: Fixed.  Backportme?  This is
+	quite a large fix, and it never worked in a stable release; so not
+	really a regression.
 
 	* lily/phrasing-slur-engraver.cc (class Phrasing_slur_engraver):
 	Update cut and paste code from Slur_engraver.
